[package]
name = "phoenix_chain"
version = "0.1.0"
authors = ["wangqi<wangalexqi@126.com>"]
edition = "2018"
#build = "src/mylibc/build.rs"

[dependencies]
cryptape-sm="0.3.0"
rand="0.7.3"
base64="0.11.0"
dotenv="0.15.0"
rayon = "1.1"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
sled="0.31.0"
serde_derive = "1.0.90"
serde_json = "1.0.39"
serde = { version = "1.0.90", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
pyo3 = "0.9.0-alpha.1"
lazy_static = "1.4.0"
[dependencies.rocket]
version = "0.4.4"
default-features = false
features = ["tls"]

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
#[build-dependencies]
#cc = "1.0"
#bindgen = "0.53.1"

